NXP-32438: Remove deprecated code in nuxeo-drive